--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dio: ^4.0.6
   provider: ^6.0.3
   get_it: ^7.2.0
+  dropdown_button2: ^1.7.2
 
 dev_dependencies:
   flutter_test:
